<resources>
    <string name="browser_key">AIzaSyAak8mFLqT9K1_RnQ90upMhuGh30YEnznQ</string>
    <string name="language_pref_key">language_pref_key</string>
    <string name="dashboard_pref_key">dashboard_pref_key</string>
    <string name="default_notification_channel_id">MFINotification</string>
    <string name="CHANNEL_NAME">MFI Notification</string>
    <string name="Bengali">বাংলা</string>
    <string name="English">English</string>
    <string name="Chooseyourlanguage">Choose your language</string>
    <string name="Hindi">हिंदी</string>
    <string name="Gujarati">ગુજરાતી</string>
    <string name="Tamil">తెలుగు</string>
    <string name="Marathi">मराठी</string>
    <string name="CacheClear">Cache Clear</string>
    <string name="doyouwantcacheclear">Do you want to clear the local data / cache data?</string>
    <string name="Thelocaldataclear">The local data has been cleared successfully and refresh the application</string>
    <string name="India">India</string>
    <string name="Version">Version (117.0.4) </string>
    <string name="VersionLang">Version (117.0.4) </string>
    <string name="app_name">SecuFarm</string>
    <string name="title_activity_navigation_drawer">SecuFarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Terrain</string>
    <string name="services">Services</string>
    <string name="contact">Contact</string>
    <string name="login_signup">Sing Up</string>
    <string name="sync">Sync</string>
    <string name="offline">Offline</string>
    <string name="sync_data">Sync Data</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_add_farm_map">Map</string>
    <string name="title_activity_mandi_detail_on_map">Map</string>
    <string name="network_not_available">Check Newtork Connection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toast_crash">My Farm Info has been crashed</string>
    <string name="monthly_membership">Monthly Membership \n for Rs 3,500</string>
    <string name="terms">Billed monthly at Rs 3,500 / month \n Cancel anytime \n 15-day money back guarantee</string>
    <string name="deta">Precise soil analysis within your budget</string>
    <string name="no_device">You don\'t have any irrigation system associated with your account.\n Do you want to update number?</string>
    <string name="update_device">You have already irrigation system associated with your account.\n Do you want to update number?</string>
    <string name="start">Your irrigation already started.\n Do you want to Off?</string>
    <string name="moisture_txt">Soil moisture in your field is too low.\n Do you want to start irrigation?</string>
    <string name="ll">Select your Language\nअपनी भाषा का चयन करें તમારી ભાષા પસંદ કરો</string>
    <string-array name="nutritionCrop">
        <item>Cotton</item>
        <item>Wheat</item>
        <item>Paddy</item>
        <item>Kinnow</item>
    </string-array>
    <string-array name="nutritionStatus">
        <item>Fertile</item>
        <item>Low Fertile</item>
    </string-array>
    <string-array name="irrigation">

        <item>Good Irrigation</item>
        <item>Rainfed</item>
        <item>Protective Irrigation</item>
    </string-array>
    <string name="soil">Soil</string>
    <string name="aaaaa"><![CDATA[<ul><li><b>पोषणमूल्यांची कमतरता: </b> पोपचा संदर्भ घ्या. 2% डीएपी + 9 0% एमजीएसओ 4 चे फुलिश फवारणी घ्या </li>" + "<li> <b> सांस्कृतिक क्रियाकलाप: </बी > तण नियंत्रणासाठी पिके घेणे /हाताळणी करणे </li> "+" <li> <b> सिंचन: </b> 4 था सिंचन </li> "+" <li> <b> आजार: </b> अलटनारिया लीफ ब्लॉट /पॅरा विल्ट </li> "+" <li> <b> रोग व्यवस्थापन: </b> एम -45 0 आर कॉपर ऑक्सीक्लोराईड @ 1.25-1.5 किलो /हेक्टर) फवारणी + स्ट्र्रेप्टोकीक्लिन (15-20 ग्राम /हेक्टर) कीटक- व्हाईटfly, थ्रिप्स, जसीड, मेली बग बॉलवॉर्म (अमेरिकन /स्पॉट /गुलाबी /स्पोडोप्टेरा) </li> 400-500 लिटर पाण्यात </li> "+" <li> <b> कीटक: </b> कीटकनाशके </li> </li> </li> </li> </li> </li> </li> "<"> <li> </li> > <ul> <li> <b> ऍफिड, जसीडीसाठी: </b> स्प्रे 5% NSKE /Acitamiprid 20% SP @ 3gm प्रति 15 लिटर पाण्यात "+" स्प्रे थाओमेथॉक्साम 25% डब्ल्यू.जी. @ 3 ग्रॅम प्रति 15 लिटर पाण्यात थ्रिप्स साठी: </b> स्प्रे फिप्पिलिल @ 45 मिली प्रति 15 लिटर पाण्यात /डायमिथोएट 30% ईसी @ 20 लीटर प्रति 15 लिटर पाण्यात /फ्लोनिकॅमिड 50% डब्ल्यू.जी. @ 3 ग्रॅम प्रति 15 लिटर पाण्यात </li> </ul> </li> "+" <li> <ul> <li> <b> व्हाईटफ्लायसाठी: </b> स्प्रे 5% एनएसकेई, एसेफेट 75% एसपी @ 30 ग्राम, डीफेंथियूरॉन 50% डब्ल्यूपी @ 20 ग्राम, बायफॅथिनिन 10% EC 25 एमएल प्रति 15 लिटर पाण्यात </li> </ul> मेलीबगसाठी: </b> 75 ग्रॅम /एसेफेट 75 टक्के एसपी @ 30 ग्रॅम /क्लोरोपायरीफॉस 20 टक्के% 30 मि.ली., बेरूप्रोफेनझीन 25 टक्के स्प्रे Verticiliumlecani 25% 15 लीटर पाण्यात प्रति 30 मि.ली. </li> </ul> </li> "+" <li> <ul> <li> <b> गुलाबी बोल्म पाळांसाठी: </b> क्विनोलफॉस @ 25 वाजता स्प्रे घ्या % EC @ 20 mlor Chloropyriphos 25% EC @ 20 एमएल किंवा थिऑडिआर्ब75% WP @ 30 ग्राम प्रति 15 लिटर पाण्यात. </Li> </ul> </li> <br /> "+" <li> नेहमी पहा उत्पादनांची लेबले आणि वापरण्याकरिता सर्व तपशीलांसाठी आणि दिशानिर्देशांसाठी </li> "+" <li> <b> कीटक अनुकूल परिस्थिती: </b> कमाल तात्पुरती <36C, किमान तात्पुरती > 26 सी, आरएच. > 75 </li> </ul>]]></string>
    <string name="welcometohelp">Welcome to help &amp; support</string>
    <string name="pleasetellus">Please tell us in details about your problem</string>
    <string name="youcanalso">You can also upload pictures and audios of your problems by pressing the button below</string>
    <string name="Feelfree">Feel free to share us your queries by pressing the <b>plus button</b> below </string>
    <string name="SelectHindi">शुरू करने के लिए क्लिक करें</string>
    <string name="SelectEnglish">Click here to start</string>
    <string name="SelectGujarati">પ્રારંભ કરવા માટે અહીં ક્લિક કરો</string>
    <string name="SelectMarathi">प्रारंभ करण्यासाठी येथे क्लिक करा</string>
    <string name="entertheregistermobile">Enter your registered mobile no</string>
    <string name="EnterMobileNo">Enter the mobile no.</string>
    <string name="Submit">Submit</string>
    <string name="or">(or)</string>
    <string name="LoginWithPassword">Login with password</string>
    <string name="Register">Register</string>
    <string name="Dear">Dear</string>
    <string name="areusurelogout">Do you want to logout?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="GPSOFF">GPS OFF \n\nPlease enable the GPS</string>
    <string name="EnableGPS">Enable GPS</string>
    <string name="Loadingstate">Loading state, Please wait...</string>
    <string name="FormattingError">Formatting error</string>
    <string name="Couldnotconnect">Could not connect to the server</string>
    <string name="Cancel">Cancel</string>
    <string name="Update">Update</string>
    <string name="GooglePlayStore">Google Play Store is available the updated version, Do you want to update ?</string>
    <string name="Loadingcrop">Loading crop list, Please wait...</string>
    <string name="validmobileno">Please enter the valid 10 digit mobile no.</string>
    <string name="Ok">Ok</string>
    <string name="ContactUs">Contact Us</string>
    <string name="AnswerDesk">Answer Desk is ready to help you with whatever you need</string>
    <string name="EnteryourName">Enter your name </string>
    <string name="Enteremailid">Enter Email Id</string>
    <string name="Enteryourmessage">Enter your message</string>
    <string name="Enteryourname">Please enter your name</string>
    <string name="Enteryouremailid">Please enter your Email Id</string>
    <string name="Enteryourphoneno">Please enter your phone no.</string>
    <string name="Enteryourpassword">Please enter your password</string>
    <string name="Enteryourconfirmpassword">Please enter your confirm password</string>
    <string name="OTPhasbeen">OTP has been sent to entered mobile no., Please use OTP as a password.</string>
    <string name="Pleasewait">Please wait...</string>
    <string name="Mobilenoisnot">Mobile no. is not registered</string>
    <string name="login">Login</string>
    <string name="Username">UserName / Email / MobileNo</string>
    <string name="Password">Password</string>
    <string name="SavePassword">Save Password</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="Pleaseentervalid">Please enter the valid mobile no.</string>
    <string name="Pleaseentervalidemail">Please enter the valid registered email Id</string>
    <string name="youarealreadylogiin">You are already logged in</string>
    <string name="wantotexit">Are you sure you want to exit?</string>
    <string name="Success">Success</string>
    <string name="PleaseCheck">Please, Check your mail id and change your password.</string>
    <string name="LogginIn">Loggin In... </string>
    <string name="IncorrectUsernameorPassword">Incorrect User name or Password </string>
    <string name="ServerError">Server Error</string>
    <string name="Verifyingemail">Verifying email... </string>
    <string name="emailiddoesnotexist">Email Id does not not exist</string>
    <string name="Farmnotavailable">Farm is not available</string>
    <string name="UserRegistration">User Registration</string>
    <string name="CreateUsernames">Create username *</string>
    <string name="CreateUsername">Create username</string>
    <string name="VisibleNames">Visible Name *</string>
    <string name="VisibleName">Visible Name</string>
    <string name="MobileNumbers">Mobile Number *</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Passwords">Password *</string>
    <string name="ConfirmPasswords">Confirm Password *</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="EmailAddressoptional">Email Address (Optional)</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Emailaddressalready">Email address already exist. Please try another email or login with this Id</string>
    <string name="entervisiblename">Please enter your visible name</string>
    <string name="passwordconfirmpassword">Password and confirm password must be same</string>
    <string name="entercity">Please enter your city</string>
    <string name="validemailid">Please enter the valid Email Id</string>
    <string name="Logout">Logout</string>
    <string name="Emergency">Emergency</string>
    <string name="Image">Image</string>
    <string name="Record">Record</string>
    <string name="Stop">Stop</string>
    <string name="Play">Play</string>
    <string name="UploadVoice">Upload Voice</string>
    <string name="EmailID">Email Id</string>
    <string name="BotanicalName">Botanical Name</string>
    <string name="EnglishName">English Name</string>
    <string name="CommonName">Common Name</string>
    <string name="GeoTag">Geo Tag</string>
    <string name="Crops">Crop</string>
    <string name="Add">Add</string>
    <string name="EmailIDs">Email ID *</string>
    <string name="AddProject">Add Project</string>
    <string name="Search">Search</string>
    <string name="UpdasteSowingdate">Update Sowing Date</string>
    <string name="StopPlayingRecording">Stop Playing Recording</string>
    <string name="SelectFarm">Select Farm</string>
    <string name="ResetyourLanguage">Please select your Language</string>
    <string name="ResetLanguage">Change Languages</string>
    <string name="FarmMarker">Farm Marker</string>
    <string name="YoutubeVideos">Youtube Videos</string>
    <string name="RefreshFarm">Refresh Farm</string>
    <string name="RefreshLanguages">Refresh Contents</string>
</resources>