<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mainheading_x5"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_forgotpassword"
            style="@style/simpletextHeadingblack_x1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/Margin_x2"
            android:text="@string/ForgotPassword" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/Question_x3"
            android:paddingRight="@dimen/Question_x3">


            <TextView
                android:id="@+id/txt_emailid"
                style="@style/simpletextQuestBlack_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mainheading_x5"
                android:text="@string/EmailIDs" />

            <EditText
                android:id="@+id/edit_emailid"
                style="@style/edittextemail_l"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/Question_x3"
                android:background="@drawable/line"
                android:hint="@string/EmailID"
                android:paddingLeft="@dimen/Question_x3" />

            <Button
                android:id="@+id/btn_passwordsubmit"
                style="@style/buttontext_m"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/Question_x3"
                android:layout_marginBottom="@dimen/mainheading_x5"
                android:background="@drawable/btn_bg"
                android:text="@string/Submit" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
